# camelsnakekebab

./: .gitignore  .travis-ci.sh  .travis.yml  META  Makefile  NOTES  README.md  _oasis  _tags  camelsnakekebab.install  camelsnakekebab.ml  camelsnakekebab.mldylib  camelsnakekebab.mli  camelsnakekebab.opam  diary.md  jbuild  jbuild-workspace  myocamlbuild.ml  opam  setup.data  setup.ml  test.ml  test00.ml
camelsnakekebab/camelsnakekebab.0.0.1/: descr
lib/: .merlin  camelsnakekebab.ml  jbuild
lib_test/: .merlin  basic.ml  jbuild
lib_test/_build/: .db  log
lib_test/_build/default/: basic.depends.ocamldep-output  basic.depends.sexp
