opam-version: "1.2"
version: "0.1"
maintainer: "Hao Wu <echowuhao@gmail.com>"
authors: ["Hao Wu <echowuhao@gmail.com>"]
homepage: "https://github.com/swuecho/camelsnakekebab"
bug-reports: "https://github.com/swuecho/camelsnakekebabissues"
dev-repo: "https://github.com/swuecho/camelsnakekebab.git"
license: "Public Domain"
build: [
  ["make"]
]
available: [ ocaml-version >= "4.02.3" ]
